--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h1>SwimFit</h1>
+  <h1>chaaammbeeEEERRRLAAAAAIIIIINNNNNNNN!!!!</h1>
 </body>
 </html>
